--- a/Udemy/VueJS2/Section01/index.html
+++ b/Udemy/VueJS2/Section01/index.html
@@ -12,20 +12,31 @@
 <body>
   <div id="app">
     <input type="text" v-on:input="changeTitle" />
-    <p>
-      {{ title }}
-    </p>
+    <p>{{ title }}</p>
+    <button v-on:click="increaseCounter">Click Me!</button>
+    <p>Counter: {{ counter }}</p>
+    <p v-on:mousemove="updateCoordinates">Coordinates: {{ x }} / {{ y }}</p>
   </div>
 
   <script>
     new Vue({
       el: '#app',
       data: {
-        title: 'Hello World!'
+        title: 'Hello World!',
+        counter: 0,
+        x: 0,
+        y: 0
       },
       methods: {
         changeTitle: function(event) {
           this.title = event.target.value;
+        },
+        increaseCounter() {
+          this.counter++;
+        },
+        updateCoordinates(event) {
+          this.x = event.clientX;
+          this.y = event.clientY;
         }
       }
     });
