--- a/Udemy/VueJS2/Section01/Exercise04/index.html
+++ b/Udemy/VueJS2/Section01/Exercise04/index.html
@@ -18,17 +18,17 @@
     <div id="effect" :class="{highlight, shrink}"></div>
   </div>
   <!-- 2) Create a couple of CSS classes and attach them via the array syntax -->
-  <div>I got no class :(</div>
+  <div :class="[backgroundYellow, colorRed, textCenter]">I'm classy :)</div>
   <!-- 3) Let the user enter a class (create some example classes) and attach it -->
   <div>
-    <input type="text">
-    <div></div>
+    <input type="text" v-model="color">
+    <div :class="[color, rectangle]"></div>
   </div>
   <!-- 4) Let the user enter a class and enter true/ false for another class (create some example classes) and attach the classes -->
   <div>
-    <input type="text">
-    <input type="text">
-    <div></div>
+    <input type="text" v-model="color2">
+    <input type="text" v-model="largeBorder">
+    <div :class="[rectangle, color2, {largeBorder}]"></div>
   </div>
   <!-- 5) Repeat 3) but now with values for styles (instead of class names). Attach the respective styles.  -->
   <div>
