--- a/Udemy/VueJS2/Section01/Exercise04/index.html
+++ b/Udemy/VueJS2/Section01/Exercise04/index.html
@@ -32,13 +32,13 @@
   </div>
   <!-- 5) Repeat 3) but now with values for styles (instead of class names). Attach the respective styles.  -->
   <div>
-    <input type="text">
-    <div></div>
+    <input type="text" v-model="colorStyle">
+    <div :style="myStyle" class="rectangle"></div>
   </div>
   <!-- 6) Create a simple progress bar with setInterval and style bindings. Start it by hitting the below button. -->
   <div>
     <button v-on:click="startProgress">Start Progress</button>
-    <div></div>
+    <div :style="progressBar"></div>
   </div>
 </div>
 
