--- a/Udemy/VueJS2/Section03/Exercise05/index.html
+++ b/Udemy/VueJS2/Section03/Exercise05/index.html
@@ -1,26 +1,52 @@
-<script src="https://npmcdn.com/vue/dist/vue.js"></script>
+<!DOCTYPE html>
+<html>
 
-<div id="exercise">
-  <!-- 1) Hook up the button to toggle the display of the two paragraphs. Use both v-if and v-show and inspect the elements to see the difference -->
-  <div>
-    <button>Toggle</button>
-    <p>You either see me ...</p>
-    <p>...or me</p>
-    <p>You either see me ...</p>
-    <p>...or me</p>
-  </div>
-  <!-- 2) Output an <ul> of array elements of your choice. Also print the index of each element. -->
-  <ul>
-    <li></li>
-  </ul>
-  <!-- 3) Print all key-value pairs of the following object: {title: 'Lord of the Rings', author: 'J.R.R. Tolkiens', books: '3'}. Also print the index of each item. -->
-  <ul>
-    <li></li>
-  </ul>
-  <!-- 4) Print the following object (only the values) and also create a nested loop for the array: {name: 'TESTOBJECT', data: [1.67, 1.33, 0.98, 2.21]} (hint: use v-for and v-if to achieve this) -->
-  <ul>
-    <li>
-    
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>VueJS</title>
+  <script src="vue.js"></script>
+</head>
+
+<body>
+  <div id="exercise">
+    <!-- 1) Hook up the button to toggle the display of the two paragraphs. Use both v-if and v-show and inspect the elements to see the difference -->
+    <div>
+      <button @click="show = !show">Toggle</button>
+      <p v-if="show">You either see me ...</p>
+      <p v-else="show">...or me</p>
+      <p v-show="show">You either see me ...</p>
+      <p v-show="!show">...or me</p>
+    </div>
+    <!-- 2) Output an <ul> of array elements of your choice. Also print the index of each element. -->
+    <ul>
+      <li v-for="(name, i) in array">{{ name }} ({{ i }})</li>
+    </ul>
+    <!-- 3) Print all key-value pairs of the following object: {title: 'Lord of the Rings', author: 'J.R.R. Tolkiens', books: '3'}. Also print the index of each item. -->
+    <ul>
+      <li v-for="(name, key, index) in myObject"> {{ index }} - {{ key }}: {{ name }}</li>
+    </ul>
+    <!-- 4) Print the following object (only the values) and also create a nested loop for the array: {name: 'TESTOBJECT', data: [1.67, 1.33, 0.98, 2.21]} (hint: use v-for and v-if to achieve this) -->
+    <ul>
+      <li v-for="(test, key) in testData">
+        <span v-if="key != 'data'">{{ test }}</span>
+        <div v-if="key == 'data'" v-for="(t) in test">{{ t }}</div>
+      </li>
+    </ul>
+    <ul>
+    <li v-for="value in testData">
+      <template v-if="Array.isArray(value)">
+        <div v-for="element in value">{{ element }}</div>
+      </template>
+      <template v-else>
+        {{ value }}
+      </template>
     </li>
   </ul>
-</div>
+  </div>
+
+  <script src="app.js"></script>
+
+</body>
+
+</html>
