--- a/Udemy/VueJS2/Section04/TheMonsterSlayer/MySolution/index.html
+++ b/Udemy/VueJS2/Section04/TheMonsterSlayer/MySolution/index.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Monster Slayer</title>
-    <script src="vue.js"></script>
-    <link rel="stylesheet" href="css/foundation.min.css">
-    <link rel="stylesheet" href="css/app.css">
+  <title>Monster Slayer</title>
+  <script src="vue.js"></script>
+  <link rel="stylesheet" href="css/foundation.min.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-<div id="app">
+  <div id="app">
     <section class="row">
-        <div class="small-6 columns">
-            <h1 class="text-center">YOU</h1>
-            <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
-
-                </div>
-            </div>
+      <div class="small-6 columns">
+        <h1 class="text-center">YOU</h1>
+        <div class="healthbar">
+          <div class="healthbar text-center" :style="healthbar(player.salute)">
+            {{ player.salute }}
+          </div>
         </div>
-        <div class="small-6 columns">
-            <h1 class="text-center">MONSTER</h1>
-            <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
-
-                </div>
-            </div>
+      </div>
+      <div class="small-6 columns">
+        <h1 class="text-center">MONSTER</h1>
+        <div class="healthbar">
+          <div class="healthbar text-center" :style="healthbar(monster.salute)">
+            {{ monster.salute }}
+          </div>
         </div>
+      </div>
     </section>
-    <section class="row controls">
-        <div class="small-12 columns">
-            <button id="start-game">START NEW GAME</button>
-        </div>
+    <section class="row controls" v-if="ui.showNewGame">
+      <div class="small-12 columns">
+        <button id="start-game" @click="ui.showNewGame = false; ui.showControl = true; ui.showBattle = true">START NEW GAME</button>
+      </div>
     </section>
-    <section class="row controls">
-        <div class="small-12 columns">
-            <button id="attack">ATTACK</button>
-            <button id="special-attack">SPECIAL ATTACK</button>
-            <button id="heal">HEAL</button>
-            <button id="give-up">GIVE UP</button>
-        </div>
+    <section class="row controls" v-if="ui.showControl">
+      <div class="small-12 columns">
+        <button id="attack" @click="attack">ATTACK</button>
+        <button id="special-attack" @click="specialAttacck">SPECIAL ATTACK</button>
+        <button id="heal" @click="heal">HEAL</button>
+        <button id="give-up" @click="giveUp">GIVE UP</button>
+      </div>
     </section>
-    <section class="row log">
-        <div class="small-12 columns">
-            <ul>
-                <li>
+    <section class="row log" v-if="ui.showBattle && logs.length>0">
+      <div class="small-12 columns">
+        <ul>
+          <template v-for="log in logs">
+                <li class="player-turn" v-if="log.hasOwnProperty('player')">{{ log.player }}</li>
+                <li class="monster-turn" v-if="log.hasOwnProperty('monster')">{{ log.monster }}</li>
+          </template>
+        </ul>
+      </div>
+    </section>
+  </div>
 
-                </li>
-            </ul>
-        </div>
-    </section>
-</div>
-
-<script src="app.js"></script>
+  <script src="app.js"></script>
 
 </body>
+
 </html>
