--- a/Udemy/VueJS2/Section04/TheMonsterSlayer/Solution/index.html
+++ b/Udemy/VueJS2/Section04/TheMonsterSlayer/Solution/index.html
@@ -45,11 +45,11 @@
             <button id="give-up" @click="giveUp">GIVE UP</button>
         </div>
     </section>
-    <section class="row log">
+    <section class="row log" v-if="turns.length > 0">
         <div class="small-12 columns">
             <ul>
-                <li>
-
+                <li v-for="turn in turns" :class="{'player-turn': turn.isPlayer, 'monster-turn': !turn.isPlayer}">
+                  {{ turn.text }}
                 </li>
             </ul>
         </div>
