--- a/Udemy/VueJS2/Section14/Lezione/index.html
+++ b/Udemy/VueJS2/Section14/Lezione/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Vue Animations</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></head>
+    <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <body>
     <div id="app">
     </div>
